--- a/plugin.xml
+++ b/plugin.xml
@@ -44,16 +44,13 @@
 		<!-- <resource-file src="google-services.json" target="app/googleservices.json" /> -->
 
 		<config-file target="AndroidManifest.xml" parent="/manifest/application">
-			<activity android:name="com.gae.scaffolder.plugin.FCMPluginActivity" android:launchMode="singleTop" android:exported="false">
+			<activity android:name="com.gae.scaffolder.plugin.FCMPluginActivity" android:launchMode="singleTop" android:exported="true">
 				<intent-filter>
 					<action android:name="FCM_PLUGIN_ACTIVITY" />
 					<category android:name="android.intent.category.DEFAULT" />
 				</intent-filter>
 			</activity>
-			<service 
-				android:name="com.gae.scaffolder.plugin.MyFirebaseMessagingService"
-				android:stopWithTask="false"
-				android:exported="false">
+			<service android:name="com.gae.scaffolder.plugin.MyFirebaseMessagingService" android:stopWithTask="false" android:exported="true">
 				<intent-filter>
 					<action android:name="com.google.firebase.MESSAGING_EVENT"/>
 				</intent-filter>
