--- a/plugin.xml
+++ b/plugin.xml
@@ -40,10 +40,9 @@
 		<preference name="ANDROID_FIREBASE_BOM_VERSION" default="26.0.0" />
 		<preference name="ANDROID_GOOGLE_SERVICES_VERSION" default="4.3.4" />
 		<preference name="ANDROID_GRADLE_TOOLS_VERSION" default="4.1.0" />
-		
-		<!-- <resource-file src="google-services.json" target="app/googleservices.json" /> -->
 
 		<config-file target="AndroidManifest.xml" parent="/manifest/application">
+			<uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 			<activity android:name="com.gae.scaffolder.plugin.FCMPluginActivity" android:launchMode="singleTop" android:exported="true">
 				<intent-filter>
 					<action android:name="FCM_PLUGIN_ACTIVITY" />
@@ -57,6 +56,7 @@
 			</service>
 			<meta-data android:name="com.google.firebase.messaging.default_notification_icon" android:resource="$ANDROID_DEFAULT_NOTIFICATION_ICON" />
 		</config-file>
+		
 		<config-file target="res/xml/config.xml" parent="/*">
 			<feature name="FCMPlugin">
 				<param name="android-package" value="com.gae.scaffolder.plugin.FCMPlugin"/>
