--- a/plugin.xml
+++ b/plugin.xml
@@ -35,7 +35,7 @@
 
 	<!-- ANDROID CONFIGURATION -->
 	<platform name="android">
-		<preference name="ANDROID_DEFAULT_NOTIFICATION_ICON" default="@mipmap/ic_notification" />
+		<preference name="ANDROID_DEFAULT_NOTIFICATION_ICON" default="@drawable/ic_notification" />
 		<preference name="ANDROID_FCM_VERSION" default="21.0.0" />
 		<preference name="ANDROID_FIREBASE_BOM_VERSION" default="26.0.0" />
 		<preference name="ANDROID_GOOGLE_SERVICES_VERSION" default="4.3.4" />
