--- a/src/android/FCMPlugin.gradle
+++ b/src/android/FCMPlugin.gradle
@@ -29,6 +29,10 @@ buildscript {
             google()
         }
     }
+    plugins {
+      // Add the dependency for the Google services Gradle plugin
+      id("com.google.gms.google-services") version "4.3.4" apply false
+    }
     dependencies {
         // Load system enviroment defined values, or, if unavailable, plugin defaults
         def ANDROID_GOOGLE_SERVICES_VERSION = System.getenv('ANDROID_GOOGLE_SERVICES_VERSION') ?: '4.3.4'
@@ -66,11 +70,15 @@ repositories {
     }
     maven { url "https://salesforce-marketingcloud.github.io/MarketingCloudSDK-Android/repository" }
 }
+plugins {
+  // Add the Google services Gradle plugin
+  id("com.google.gms.google-services")
+}
 dependencies {
     implementation "com.salesforce.marketingcloud:marketingcloudsdk:7.4.2"
 
     //test PB e DM Mabs 10
-    implementation "com.google.firebase:firebase-core:9.6.1"
+    //implementation "com.google.firebase:firebase-core:9.6.1"
     
     // Load system enviroment defined values, or, if unavailable, plugin defaults
     def ANDROID_FCM_VERSION = System.getenv('ANDROID_FCM_VERSION') ?: '21.0.0'
@@ -110,6 +118,8 @@ dependencies {
         implementation "com.google.firebase:firebase-messaging"
     }
 }
+
+
 //apply plugin: 'com.google.gms.google-services'
 // class must be used instead of id(string) to be able to apply plugin from non-root gradle file
 if (!project.plugins.hasPlugin('com.google.gms.google-services')) {
