--- a/src/android/FCMPlugin.gradle
+++ b/src/android/FCMPlugin.gradle
@@ -29,10 +29,11 @@ buildscript {
             google()
         }
     }
-    plugins {
+    //test mabs 10
+    //plugins {
       // Add the dependency for the Google services Gradle plugin
-      id("com.google.gms.google-services") version "4.3.4" apply false
-    }
+      //id("com.google.gms.google-services") version "4.3.4" apply false
+    //}
     dependencies {
         // Load system enviroment defined values, or, if unavailable, plugin defaults
         def ANDROID_GOOGLE_SERVICES_VERSION = System.getenv('ANDROID_GOOGLE_SERVICES_VERSION') ?: '4.3.4'
@@ -70,10 +71,11 @@ repositories {
     }
     maven { url "https://salesforce-marketingcloud.github.io/MarketingCloudSDK-Android/repository" }
 }
-plugins {
+//test mabs 10
+//plugins {
   // Add the Google services Gradle plugin
-  id("com.google.gms.google-services")
-}
+  //id("com.google.gms.google-services")
+//}
 dependencies {
     implementation "com.salesforce.marketingcloud:marketingcloudsdk:7.4.2"
 
